<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.therock.resistence.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/codigo"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Bnegro"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:onClick="Negro"
                android:text="@string/negro"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/Bmarron"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/brown"
                android:onClick="Marron"
                android:text="@string/marron" />

            <Button
                android:id="@+id/Brojo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/red"
                android:onClick="Rojo"
                android:text="@string/rojo" />

            <Button
                android:id="@+id/Bnaranja"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/orangered"
                android:onClick="Naranja"
                android:text="@string/naranja" />

            <Button
                android:id="@+id/Bamarillo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:onClick="Amarillo"
                android:text="@string/amarillo" />

            <Button
                android:id="@+id/Bverde"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:onClick="Verde"
                android:text="@string/verde" />

            <Button
                android:id="@+id/Bazul"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="Azul"
                android:text="@string/azul" />

            <Button
                android:id="@+id/Bpurpura"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/purple"
                android:onClick="Purpura"
                android:text="@string/purpura" />

            <Button
                android:id="@+id/Bgris"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/gray"
                android:onClick="Gris"
                android:text="@string/gris" />

            <Button
                android:id="@+id/Bblanco"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:onClick="Blanco"
                android:text="@string/blanco" />

            <Button
                android:id="@+id/Bmasdorado"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/goldenrod"
                android:onClick="MasDorado"
                android:text="@string/masdorado" />

            <Button
                android:id="@+id/Bmasgris"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/darkblue"
                android:onClick="MasGris"
                android:text="@string/masgris" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/resistencia"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/Tprimero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/Tsegundo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/Ttercero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/Tcuarto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/Tresultado"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Breiniciar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="Reiniciar"
                        android:text="@string/reiniciar" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
